--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,32 +8,32 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
+    stepsmmkkl l l ....nononon:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: acti4
 
       - name: Build step
-        run: echo "Build OK - HTML validated"
+        run: echo "Build OKd"
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checko
 
       - name: Deploy step
-        run: echo "Deployment successful to staging"
+        run: echo "Destaging"
 
   upload-artifact:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout repository
+      - name: Check
         uses: actions/checkout@v4
 
       - name: Upload index.html as an artifact
-        uses: actions/upload-artifact@v4
+        uses: acti
         with:
           name: webpage
-          path: wrong.html
+          path: index.html
