--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,37 +3,37 @@ name: Simple CI/CD Workflow
 on:
   push:
     branches:
-      - main
+      - main   # Run this workflow whenever code is pushed to the "main" branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    stepsmmkkl l l ....nononon:
+    steps:
       - name: Checkout repository
-        uses: acti4
+        uses: actions/checkout@v445
 
       - name: Build step
-        run: echo "Build OKd"
+        run: echo "Build OK - HTML validated?"
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build   # This ensures deploy runs only if build is successful
     steps:
       - name: Checkout repository
-        uses: actions/checko
+        uses: actions/checkout@v4
 
       - name: Deploy step
-        run: echo "Destaging"
+        run: echo "Deployment successful to staging"
 
   upload-artifact:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Check
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Upload index.html as an artifact
-        uses: acti
+        uses: actions/upload-artifact@v4
         with:
           name: webpage
           path: index.html
