Yoink ci-cd.yml

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v12345
 
       - name: Build step
-        run: echo "Build OK - HTML validated?"
+        run: echo "Build OK - HTML validated"
 
   deploy:
     runs-on: ubuntu-latest
