--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: sleep   # This ensures deploy runs only if build is successful
+    needs: build   # This ensures deploy runs only if build is successful
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
