--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Upload index.html as an artifact
         uses: actions/upload-artifact@v4
-        not:
+        with:
           name: webpage
           path: index.html
